--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:n6ZoErF2q9gZcCjdT+4X7+wk0I7b5WYRS7MhQogbWRA=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
